--- a/docs/使用示例/性能基准测试指南.md
+++ b/docs/使用示例/性能基准测试指南.md
@@ -1,597 +1,821 @@
 # SynapseDB 性能基准测试指南
 
-SynapseDB v1.1 提供了完整的性能基准测试框架，用于评估数据库在各种工作负载下的表现。
+## 概述
 
-## 快速测试
+SynapseDB 性能基准测试框架提供了完整的性能分析、回归检测和报告生成功能。支持多种输出格式、内存泄漏检测、以及自动化的性能回归分析，帮助开发者监控和优化数据库性能。
 
-### 运行内置基准测试
+## 核心组件
 
-```bash
-# 快速基准测试（适用于 CI/开发环境）
-node benchmarks/quick.mjs
+### 1. 基准测试管理器
 
-# 全面基准测试（适用于性能评估）
-node benchmarks/comprehensive.mjs
+```typescript
+import { BenchmarkManager, createBenchmarkManager, synapseDBCoreSuite } from '@/benchmark';
 
-# 自定义配置运行
-SCALE_FACTOR=0.5 ITERATIONS=100 node benchmarks/comprehensive.mjs
+// 创建基准测试管理器
+const manager = createBenchmarkManager();
+
+// 运行单个测试套件
+const results = await manager.runSuite(synapseDBCoreSuite);
+
+// 运行完整基准测试
+const { report, outputs } = await manager.benchmark({
+  suites: [synapseDBCoreSuite],
+  outputFormats: ['console', 'html', 'json'],
+  outputDir: './benchmark-reports',
+});
+
+console.log('基准测试完成:', report.summary);
 ```
 
-### 环境变量配置
+### 2. 测试运行器
 
-```bash
-# 缩放因子（数据量倍数，默认 1.0）
-SCALE_FACTOR=2.0
+```typescript
+import { BenchmarkRunnerImpl, PerformanceMonitorImpl } from '@/benchmark/runner';
 
-# 迭代次数（默认 3）
-ITERATIONS=5
+// 创建性能监控器
+const monitor = new PerformanceMonitorImpl();
 
-# 详细输出（默认 false）
-VERBOSE=true
+// 监控内存使用
+monitor.startMemoryMonitoring();
+// 执行一些操作...
+const memoryStats = monitor.getMemoryStats();
+console.log('内存统计:', memoryStats);
 
-# 结果输出目录（默认 ./benchmark-results）
-OUTPUT_DIR=./performance-reports
-```
+// 创建基准测试运行器
+const runner = new BenchmarkRunnerImpl();
 
-## 基准测试类型
+// 运行单个测试
+const testResult = await runner.runTest({
+  name: '自定义性能测试',
+  description: '测试特定功能性能',
+  test: async (config) => {
+    // 测试实现
+    const startTime = performance.now();
 
-### 1. 写入性能测试
-
-```javascript
-import { createBenchmarkFramework } from './benchmarks/framework.mjs';
-
-const framework = createBenchmarkFramework('./benchmark.synapsedb');
-
-// 批量写入测试
-const writeResults = await framework.runSuite('写入性能测试', [
-  {
-    name: '单条 Fact 插入',
-    setup: async (db) => {
-      /* 准备数据 */
-    },
-    run: async (db) => {
-      for (let i = 0; i < 1000; i++) {
-        db.addFact({
-          subject: `node_${i}`,
-          predicate: 'connects_to',
-          object: `node_${i + 1}`,
-        });
-      }
-    },
-    teardown: async (db) => {
-      await db.flush();
-    },
-  },
-  {
-    name: '批量事务写入',
-    setup: async (db) => {
-      /* 准备数据 */
-    },
-    run: async (db) => {
-      db.beginBatch();
-      for (let i = 0; i < 1000; i++) {
-        db.addFact({
-          subject: `batch_${i}`,
-          predicate: 'relates_to',
-          object: `batch_${i + 1}`,
-        });
-      }
-      await db.commitBatch();
-    },
-  },
-]);
-
-console.log('写入性能结果:', writeResults);
-```
-
-### 2. 查询性能测试
-
-```javascript
-// 查询性能基准
-const queryResults = await framework.runSuite('查询性能测试', [
-  {
-    name: '简单条件查询',
-    setup: async (db) => {
-      // 准备测试数据
-      for (let i = 0; i < 10000; i++) {
-        db.addFact({
-          subject: `user_${i}`,
-          predicate: 'likes',
-          object: `item_${i % 100}`,
-        });
-      }
-      await db.flush();
-    },
-    run: async (db) => {
-      // 测试各种查询模式
-      const results1 = db.find({ predicate: 'likes' }).limit(100).all();
-      const results2 = db.find({ object: 'item_50' }).all();
-      const results3 = db.find({ subject: 'user_500' }).all();
-
-      return results1.length + results2.length + results3.length;
-    },
-  },
-  {
-    name: '链式联想查询',
-    run: async (db) => {
-      const results = db
-        .find({ subject: 'user_100' })
-        .follow('likes')
-        .followReverse('likes')
-        .limit(50)
-        .all();
-
-      return results.length;
-    },
-  },
-]);
-```
-
-### 3. 内存使用测试
-
-```javascript
-// 内存使用基准
-const memoryResults = await framework.runSuite('内存使用测试', [
-  {
-    name: '大数据集加载',
-    beforeMemory: true,
-    afterMemory: true,
-    run: async (db) => {
-      // 加载大量数据
-      for (let i = 0; i < 50000; i++) {
-        db.addFact(
-          {
-            subject: `large_${i}`,
-            predicate: 'contains',
-            object: `data_${i}`,
-          },
-          {
-            subjectProperties: {
-              type: 'dataset',
-              size: i,
-              metadata: new Array(100).fill(i).join(','),
-            },
-          },
-        );
-      }
-      await db.flush();
-    },
-  },
-]);
-```
-
-### 4. 并发性能测试
-
-```javascript
-// 并发读写测试
-const concurrentResults = await framework.runSuite('并发性能测试', [
-  {
-    name: '多线程读取测试',
-    run: async (db) => {
-      const promises = Array.from({ length: 10 }, (_, threadId) =>
-        Promise.resolve().then(async () => {
-          const results = [];
-          for (let i = 0; i < 100; i++) {
-            const query = db.find({
-              predicate: 'test_predicate',
-              subject: `thread_${threadId}_${i}`,
-            });
-            results.push(...query.all());
-          }
-          return results.length;
-        }),
-      );
-
-      const allResults = await Promise.all(promises);
-      return allResults.reduce((sum, count) => sum + count, 0);
-    },
-  },
-]);
-```
-
-## 自定义基准测试
-
-### 创建测试套件
-
-```javascript
-// custom-benchmark.mjs
-import { createBenchmarkFramework } from './benchmarks/framework.mjs';
-import { SynapseDB } from '../dist/index.js';
-
-async function customBenchmark() {
-  const framework = createBenchmarkFramework('./custom-test.synapsedb');
-
-  const results = await framework.runSuite('自定义测试套件', [
-    {
-      name: '特定场景测试',
-      validate: (result) => result > 0, // 结果验证
-      iterations: 5, // 重复次数
-      timeout: 30000, // 超时时间(ms)
-      setup: async (db) => {
-        // 测试准备
-        console.log('准备测试数据...');
-      },
-      run: async (db) => {
-        // 核心测试逻辑
-        const startTime = performance.now();
-
-        // 你的测试代码
-        for (let i = 0; i < 1000; i++) {
-          db.addFact({
-            subject: `custom_${i}`,
-            predicate: 'custom_relation',
-            object: `target_${i % 10}`,
-          });
-        }
-
-        const endTime = performance.now();
-        return { duration: endTime - startTime, operations: 1000 };
-      },
-      teardown: async (db) => {
-        // 清理工作
-        await db.flush();
-      },
-    },
-  ]);
-
-  // 输出结果
-  framework.printResults(results);
-
-  // 导出报告
-  await framework.exportResults('./custom-benchmark-report.json', results);
-
-  await framework.cleanup();
-}
-
-customBenchmark().catch(console.error);
-```
-
-## 性能分析
-
-### 1. 延迟分析
-
-```javascript
-const latencyTest = {
-  name: '延迟分析',
-  run: async (db) => {
-    const latencies = [];
-
+    // 执行被测试代码
     for (let i = 0; i < 1000; i++) {
-      const start = performance.now();
-
-      db.addFact({
-        subject: `latency_${i}`,
-        predicate: 'measures',
-        object: 'performance',
-      });
-
-      const end = performance.now();
-      latencies.push(end - start);
+      // 模拟操作
     }
 
-    // 计算统计信息
-    latencies.sort((a, b) => a - b);
-    const p50 = latencies[Math.floor(latencies.length * 0.5)];
-    const p95 = latencies[Math.floor(latencies.length * 0.95)];
-    const p99 = latencies[Math.floor(latencies.length * 0.99)];
-    const avg = latencies.reduce((sum, lat) => sum + lat, 0) / latencies.length;
+    const executionTime = performance.now() - startTime;
 
-    return { p50, p95, p99, avg, min: latencies[0], max: latencies[latencies.length - 1] };
+    return {
+      name: '自定义性能测试',
+      executionTime,
+      memoryUsage: process.memoryUsage().heapUsed,
+      operations: 1000,
+      operationsPerSecond: (1000 / executionTime) * 1000,
+      averageLatency: executionTime / 1000,
+      minLatency: 0,
+      maxLatency: 0,
+      p95Latency: 0,
+      p99Latency: 0,
+      dataSize: 1000,
+      timestamp: new Date(),
+    };
   },
-};
+});
 ```
 
-### 2. 吞吐量分析
+## 命令行工具使用
 
-```javascript
-const throughputTest = {
-  name: '吞吐量分析',
-  run: async (db) => {
-    const duration = 10000; // 10秒测试
-    const startTime = Date.now();
-    let operations = 0;
+### 运行完整基准测试
 
-    // 连续执行操作直到时间到
-    while (Date.now() - startTime < duration) {
-      db.addFact({
-        subject: `throughput_${operations}`,
-        predicate: 'tests',
-        object: 'throughput',
-      });
-      operations++;
-    }
+```bash
+# 运行所有模块的基准测试
+pnpm benchmark
 
-    const actualDuration = Date.now() - startTime;
-    const opsPerSecond = (operations * 1000) / actualDuration;
+# 指定输出格式和目录
+pnpm benchmark -- --format html,json,csv --output ./reports
 
-    return { operations, duration: actualDuration, opsPerSecond };
-  },
-};
+# 不显示控制台输出
+pnpm benchmark -- --no-console --format html,json
 ```
 
-### 3. 资源使用分析
+### 运行特定模块测试
 
-```javascript
-const resourceTest = {
-  name: '资源使用分析',
-  beforeMemory: true,
-  afterMemory: true,
-  beforeDisk: true,
-  afterDisk: true,
-  run: async (db) => {
-    // 执行资源密集操作
-    const batchSize = 10000;
+```bash
+# SynapseDB 核心功能测试
+pnpm benchmark:core
 
-    db.beginBatch();
-    for (let i = 0; i < batchSize; i++) {
-      db.addFact(
-        {
-          subject: `resource_${i}`,
-          predicate: 'consumes',
-          object: 'memory',
-        },
-        {
-          subjectProperties: {
-            data: new Array(1000).fill('x').join(''),
-            timestamp: Date.now(),
-            index: i,
-          },
-        },
-      );
+# 全文搜索引擎测试
+pnpm benchmark:search
+
+# 图算法库测试
+pnpm benchmark:graph
+
+# 空间几何计算测试
+pnpm benchmark:spatial
+```
+
+### 性能回归检测
+
+```bash
+# 基于基线报告检测性能回归
+pnpm benchmark regression --baseline ./reports/baseline.json --threshold 10
+
+# 设置更严格的回归阈值
+pnpm benchmark regression --baseline ./reports/baseline.json --threshold 5
+```
+
+### 内存泄漏检测
+
+```bash
+# 运行内存泄漏检测
+pnpm benchmark memory-leak
+
+# 自定义参数
+pnpm benchmark memory-leak --iterations 200 --operations 2000 --threshold 20971520
+
+# 强制垃圾回收（需要 --expose-gc 启动参数）
+node --expose-gc ./dist/cli/benchmark.js memory-leak --force-gc
+```
+
+## 内置测试套件
+
+### 1. SynapseDB 核心功能套件
+
+```typescript
+import { synapseDBCoreSuite } from '@/benchmark/suites';
+
+// 包含的测试项目：
+// - 三元组插入性能
+// - 三元组查询性能
+// - 批量插入性能
+// - 索引构建性能
+// - 属性存储性能
+// - WAL 写入性能
+// - 压实操作性能
+
+const coreResults = await manager.runSuite(synapseDBCoreSuite);
+console.log('核心功能测试结果:', coreResults);
+```
+
+### 2. 全文搜索引擎套件
+
+```typescript
+import { fullTextSearchSuite } from '@/benchmark/suites';
+
+// 包含的测试项目：
+// - 文档索引性能
+// - 搜索查询性能
+// - 布尔查询性能
+// - 模糊搜索性能
+// - 分析器性能
+
+const searchResults = await manager.runSuite(fullTextSearchSuite);
+console.log('全文搜索测试结果:', searchResults);
+```
+
+### 3. 图算法库套件
+
+```typescript
+import { graphAlgorithmsSuite } from '@/benchmark/suites';
+
+// 包含的测试项目：
+// - PageRank 算法性能
+// - 社区发现算法性能
+// - 最短路径算法性能
+// - 中心性算法性能
+// - 相似度计算性能
+
+const graphResults = await manager.runSuite(graphAlgorithmsSuite);
+console.log('图算法测试结果:', graphResults);
+```
+
+### 4. 空间几何计算套件
+
+```typescript
+import { spatialGeometrySuite } from '@/benchmark/suites';
+
+// 包含的测试项目：
+// - 距离计算性能
+// - 几何相交检测性能
+// - 缓冲区生成性能
+// - 面积计算性能
+// - 空间索引性能
+
+const spatialResults = await manager.runSuite(spatialGeometrySuite);
+console.log('空间计算测试结果:', spatialResults);
+```
+
+## 自定义测试套件
+
+### 创建自定义测试
+
+```typescript
+import { BenchmarkTest, BenchmarkSuite } from '@/benchmark/types';
+
+// 定义单个测试
+const customTest: BenchmarkTest = {
+  name: '自定义数据库查询测试',
+  description: '测试复杂查询场景的性能',
+  test: async (config) => {
+    const startTime = performance.now();
+
+    // 初始化测试数据
+    const db = await SynapseDB.open(':memory:');
+
+    // 添加测试数据
+    for (let i = 0; i < 5000; i++) {
+      db.addFact({
+        subject: `entity_${i}`,
+        predicate: 'hasProperty',
+        object: `value_${i % 100}`,
+      });
     }
-    await db.commitBatch();
 
-    // 强制持久化
     await db.flush();
 
-    return batchSize;
+    // 执行查询测试
+    const queryStart = performance.now();
+    const results = db.find({ predicate: 'hasProperty' }).all();
+    const queryTime = performance.now() - queryStart;
+
+    const totalTime = performance.now() - startTime;
+
+    await db.close();
+
+    return {
+      name: '自定义数据库查询测试',
+      description: '测试复杂查询场景的性能',
+      executionTime: totalTime,
+      memoryUsage: process.memoryUsage().heapUsed,
+      operations: results.length,
+      operationsPerSecond: (results.length / queryTime) * 1000,
+      averageLatency: queryTime / results.length,
+      minLatency: 0,
+      maxLatency: queryTime,
+      p95Latency: queryTime * 0.95,
+      p99Latency: queryTime * 0.99,
+      dataSize: 5000,
+      timestamp: new Date(),
+      metadata: {
+        queryTime,
+        resultCount: results.length,
+        dataSize: 5000,
+      },
+    };
   },
 };
+
+// 创建测试套件
+const customSuite: BenchmarkSuite = {
+  name: '自定义测试套件',
+  description: '针对特定业务场景的性能测试',
+  benchmarks: [customTest],
+  config: {
+    warmupRuns: 2,
+    runs: 5,
+    timeout: 30000,
+  },
+};
+
+// 运行自定义测试套件
+const customResults = await manager.runSuite(customSuite);
 ```
 
-## 基准测试最佳实践
+### 批量测试场景
 
-### 1. 数据准备
+```typescript
+// 创建数据密集型测试
+const dataIntensiveTests: BenchmarkTest[] = [
+  {
+    name: '大量三元组插入',
+    test: async () => {
+      const db = await SynapseDB.open(':memory:');
+      const startTime = performance.now();
 
-```javascript
-// 确保测试数据的一致性
-async function prepareTestData(db, scale = 1.0) {
-  const baseSize = Math.floor(10000 * scale);
+      // 插入100万个三元组
+      for (let i = 0; i < 1000000; i++) {
+        db.addFact({
+          subject: `s_${i}`,
+          predicate: 'relates_to',
+          object: `o_${i % 10000}`,
+        });
 
-  console.log(`准备 ${baseSize} 条测试数据...`);
+        // 每10000条记录刷新一次
+        if (i % 10000 === 0) {
+          await db.flush();
+        }
+      }
 
-  // 使用固定种子确保可重复性
-  const seed = 12345;
-  let random = seed;
-  const nextRandom = () => {
-    random = (random * 1103515245 + 12345) % 2 ** 31;
-    return random / 2 ** 31;
-  };
+      await db.flush();
+      const executionTime = performance.now() - startTime;
 
-  db.beginBatch();
-  for (let i = 0; i < baseSize; i++) {
-    const subjectId = Math.floor(nextRandom() * (baseSize / 10));
-    const objectId = Math.floor(nextRandom() * (baseSize / 10));
+      await db.close();
 
-    db.addFact(
-      {
-        subject: `node_${subjectId}`,
-        predicate: 'relates_to',
-        object: `node_${objectId}`,
-      },
-      {
-        subjectProperties: { type: 'test_node', value: subjectId },
-        objectProperties: { type: 'test_node', value: objectId },
-        edgeProperties: { weight: nextRandom(), created: Date.now() - i * 1000 },
-      },
-    );
-  }
-  await db.commitBatch();
+      return {
+        name: '大量三元组插入',
+        executionTime,
+        memoryUsage: process.memoryUsage().heapUsed,
+        operations: 1000000,
+        operationsPerSecond: (1000000 / executionTime) * 1000,
+        averageLatency: executionTime / 1000000,
+        minLatency: 0,
+        maxLatency: 0,
+        p95Latency: 0,
+        p99Latency: 0,
+        dataSize: 1000000,
+        timestamp: new Date(),
+      };
+    },
+  },
 
-  console.log('测试数据准备完成');
+  {
+    name: '复杂查询性能',
+    test: async () => {
+      // 类似的实现...
+    },
+  },
+];
+```
+
+## 报告生成和分析
+
+### HTML 报告
+
+HTML 报告包含交互式图表和详细的性能分析：
+
+```typescript
+// 生成 HTML 报告
+const { outputs } = await manager.benchmark({
+  suites: [synapseDBCoreSuite],
+  outputFormats: ['html'],
+  outputDir: './reports',
+});
+
+// HTML 报告特性：
+// - 交互式性能图表（使用 Chart.js）
+// - 内存使用趋势图
+// - 操作吞吐量对比
+// - 延迟分布直方图
+// - 性能建议和优化提示
+```
+
+### JSON 报告
+
+JSON 格式便于程序化处理和集成到 CI/CD 流水线：
+
+```typescript
+// 解析 JSON 报告
+const report = JSON.parse(await fs.readFile('./reports/benchmark-report.json', 'utf8'));
+
+console.log('测试摘要:', report.summary);
+console.log('环境信息:', report.environment);
+console.log('详细结果:', report.results);
+
+// 提取关键指标
+const coreResults = report.results.find((r) => r.suiteName === 'SynapseDB Core');
+const insertionTest = coreResults.results.find((r) => r.name.includes('插入'));
+
+console.log(`插入性能: ${insertionTest.operationsPerSecond.toFixed(0)} ops/sec`);
+console.log(`平均延迟: ${insertionTest.averageLatency.toFixed(2)}ms`);
+```
+
+### CSV 报告
+
+CSV 格式适合导入到电子表格进行进一步分析：
+
+```bash
+# CSV 报告包含字段：
+# - 测试名称
+# - 执行时间
+# - 内存使用
+# - 操作数量
+# - 每秒操作数
+# - 平均延迟
+# - P95/P99 延迟
+# - 数据大小
+# - 时间戳
+
+# 在 Excel 或 Google Sheets 中打开进行趋势分析
+```
+
+## 性能回归检测
+
+### 基线建立
+
+```bash
+# 首次运行建立基线
+pnpm benchmark -- --format json --output ./baselines
+
+# 重命名为基线文件
+mv ./baselines/benchmark-report-*.json ./baselines/baseline.json
+```
+
+### 回归检测配置
+
+```typescript
+// 配置回归检测
+const regressionResults = await manager.runRegressionTest(baselineReport, {
+  regressionThreshold: 10, // 10% 性能退化阈值
+  improvementThreshold: 5, // 5% 性能改进阈值
+  significance: 0.05, // 统计显著性水平
+  minSampleSize: 3, // 最小样本数
+});
+
+// 分析回归结果
+const failedRegressions = regressionResults.filter((r) => !r.passed);
+
+if (failedRegressions.length > 0) {
+  console.log('检测到性能回归:');
+
+  failedRegressions.forEach((regression) => {
+    console.log(`❌ ${regression.testName}:`);
+    console.log(`  指标: ${regression.metric}`);
+    console.log(`  变化: ${regression.changePercent.toFixed(2)}%`);
+    console.log(`  当前: ${regression.currentValue.toFixed(2)}`);
+    console.log(`  基线: ${regression.baselineValue.toFixed(2)}`);
+  });
 }
 ```
 
-### 2. 测试隔离
+### CI/CD 集成
 
-```javascript
-// 每个测试使用独立的数据库实例
-async function isolatedTest(testName, testFn) {
-  const dbPath = `./test-${testName}-${Date.now()}.synapsedb`;
-  const db = await SynapseDB.open(dbPath);
+```yaml
+# GitHub Actions 示例
+name: Performance Regression Test
 
-  try {
-    return await testFn(db);
-  } finally {
+on: [push, pull_request]
+
+jobs:
+  benchmark:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Run benchmarks
+        run: pnpm benchmark -- --format json --output ./reports
+
+      - name: Check for regressions
+        run: |
+          if [ -f ./baselines/baseline.json ]; then
+            pnpm benchmark regression \
+              --baseline ./baselines/baseline.json \
+              --threshold 15 \
+              --output ./reports
+          else
+            echo "No baseline found, skipping regression test"
+          fi
+
+      - name: Upload reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: benchmark-reports
+          path: ./reports/
+```
+
+## 内存泄漏检测
+
+### 基础检测
+
+```typescript
+// 内存泄漏检测实现
+class MemoryLeakDetector {
+  private memoryProgression: number[] = [];
+
+  async detectLeaks(options: {
+    iterations: number;
+    operationsPerIteration: number;
+    threshold: number;
+  }) {
+    const { iterations, operationsPerIteration, threshold } = options;
+
+    // 强制垃圾回收（如果可用）
+    if (global.gc) {
+      global.gc();
+    }
+
+    const initialMemory = process.memoryUsage().heapUsed;
+    this.memoryProgression.push(initialMemory);
+
+    // 执行测试迭代
+    for (let i = 0; i < iterations; i++) {
+      await this.runIteration(operationsPerIteration);
+
+      // 强制垃圾回收
+      if (global.gc) {
+        global.gc();
+      }
+
+      const currentMemory = process.memoryUsage().heapUsed;
+      this.memoryProgression.push(currentMemory);
+    }
+
+    // 分析内存增长趋势
+    const finalMemory = this.memoryProgression[this.memoryProgression.length - 1];
+    const memoryGrowth = finalMemory - initialMemory;
+
+    return {
+      hasLeak: memoryGrowth > threshold,
+      memoryGrowth,
+      growthTrend: this.analyzeGrowthTrend(),
+      progression: this.memoryProgression,
+    };
+  }
+
+  private async runIteration(operations: number) {
+    // 模拟内存操作
+    const db = await SynapseDB.open(':memory:');
+
+    for (let i = 0; i < operations; i++) {
+      db.addFact({
+        subject: `temp_${i}`,
+        predicate: 'test',
+        object: `value_${i}`,
+      });
+    }
+
+    await db.flush();
     await db.close();
-    // 清理测试文件
-    await fs.unlink(dbPath).catch(() => {});
+  }
+
+  private analyzeGrowthTrend(): 'increasing' | 'stable' | 'decreasing' {
+    if (this.memoryProgression.length < 10) return 'stable';
+
+    const mid = Math.floor(this.memoryProgression.length / 2);
+    const firstHalf = this.memoryProgression.slice(0, mid);
+    const secondHalf = this.memoryProgression.slice(mid);
+
+    const firstAvg = firstHalf.reduce((sum, val) => sum + val, 0) / firstHalf.length;
+    const secondAvg = secondHalf.reduce((sum, val) => sum + val, 0) / secondHalf.length;
+
+    if (secondAvg > firstAvg * 1.1) return 'increasing';
+    if (secondAvg < firstAvg * 0.9) return 'decreasing';
+    return 'stable';
+  }
+}
+```
+
+### 使用命令行检测
+
+```bash
+# 基础内存泄漏检测
+pnpm benchmark memory-leak
+
+# 自定义参数检测
+pnpm benchmark memory-leak \
+  --iterations 100 \
+  --operations 1000 \
+  --threshold 10485760
+
+# 启用垃圾回收强制执行
+node --expose-gc ./dist/cli/benchmark.js memory-leak --force-gc
+```
+
+## 性能优化建议
+
+### 基于测试结果的优化
+
+```typescript
+// 性能分析和建议生成
+class PerformanceAnalyzer {
+  generateRecommendations(results: BenchmarkResult[]): string[] {
+    const recommendations: string[] = [];
+
+    results.forEach((result) => {
+      // 内存使用分析
+      if (result.memoryUsage > 100 * 1024 * 1024) {
+        // 100MB
+        recommendations.push(
+          `${result.name}: 内存使用过高 (${(result.memoryUsage / 1024 / 1024).toFixed(1)}MB)，考虑优化数据结构或增加垃圾回收`,
+        );
+      }
+
+      // 执行时间分析
+      if (result.averageLatency > 100) {
+        // 100ms
+        recommendations.push(
+          `${result.name}: 平均延迟过高 (${result.averageLatency.toFixed(2)}ms)，建议检查算法复杂度和I/O操作`,
+        );
+      }
+
+      // 吞吐量分析
+      if (result.operationsPerSecond < 1000) {
+        recommendations.push(
+          `${result.name}: 吞吐量较低 (${result.operationsPerSecond.toFixed(0)} ops/sec)，考虑批处理优化或并行化`,
+        );
+      }
+
+      // P99 延迟分析
+      if (result.p99Latency > result.averageLatency * 5) {
+        recommendations.push(`${result.name}: P99延迟波动大，可能存在性能热点或资源竞争`);
+      }
+    });
+
+    return recommendations;
+  }
+}
+
+// 使用分析器
+const analyzer = new PerformanceAnalyzer();
+const recommendations = analyzer.generateRecommendations(benchmarkResults);
+
+console.log('性能优化建议:');
+recommendations.forEach((rec, index) => {
+  console.log(`${index + 1}. ${rec}`);
+});
+```
+
+### 常见性能模式
+
+```typescript
+// 批处理优化模式
+async function batchOptimizedInsert(db: SynapseDB, facts: Fact[]) {
+  const batchSize = 1000;
+
+  for (let i = 0; i < facts.length; i += batchSize) {
+    const batch = facts.slice(i, i + batchSize);
+
+    // 开始批次
+    db.beginBatch();
+
+    try {
+      // 批量添加
+      batch.forEach((fact) => db.addFact(fact));
+
+      // 提交批次
+      await db.commitBatch();
+    } catch (error) {
+      // 回滚批次
+      await db.abortBatch();
+      throw error;
+    }
+  }
+}
+
+// 内存优化模式
+async function memoryEfficientQuery(db: SynapseDB, criteria: any) {
+  const iterator = db.find(criteria).iterator({ batchSize: 100 });
+
+  const results = [];
+  for await (const batch of iterator) {
+    // 处理批次
+    results.push(...batch);
+
+    // 定期垃圾回收
+    if (results.length % 1000 === 0 && global.gc) {
+      global.gc();
+    }
+  }
+
+  return results;
+}
+```
+
+## 最佳实践
+
+### 1. 测试环境一致性
+
+```typescript
+// 确保测试环境一致
+const environmentInfo = {
+  nodeVersion: process.version,
+  platform: process.platform,
+  arch: process.arch,
+  cpuInfo: require('os').cpus()[0],
+  totalMemory: require('os').totalmem(),
+  freeMemory: require('os').freemem(),
+};
+
+console.log('测试环境:', environmentInfo);
+```
+
+### 2. 测试数据标准化
+
+```typescript
+// 使用确定性测试数据
+class TestDataGenerator {
+  constructor(private seed: number = 42) {}
+
+  generateFacts(count: number): Fact[] {
+    const facts: Fact[] = [];
+
+    for (let i = 0; i < count; i++) {
+      facts.push({
+        subject: `entity_${i}`,
+        predicate: this.getRandomPredicate(i),
+        object: `value_${i % 100}`,
+      });
+    }
+
+    return facts;
+  }
+
+  private getRandomPredicate(index: number): string {
+    const predicates = ['hasProperty', 'relatesTo', 'contains', 'dependsOn'];
+    return predicates[index % predicates.length];
   }
 }
 ```
 
 ### 3. 结果验证
 
-```javascript
-const validatedTest = {
-  name: '结果验证测试',
-  validate: (result) => {
-    // 验证结果的正确性
-    if (typeof result !== 'object') return false;
-    if (result.inserted < 1000) return false;
-    if (result.queried < 100) return false;
+```typescript
+// 验证基准测试结果的有效性
+class ResultValidator {
+  validate(result: BenchmarkResult): boolean {
+    // 基本有效性检查
+    if (result.executionTime <= 0) return false;
+    if (result.operations <= 0) return false;
+    if (result.operationsPerSecond <= 0) return false;
+
+    // 逻辑一致性检查
+    const expectedOpsPerSec = (result.operations / result.executionTime) * 1000;
+    const deviation = Math.abs(result.operationsPerSecond - expectedOpsPerSec) / expectedOpsPerSec;
+
+    if (deviation > 0.01) {
+      // 1% 偏差容忍度
+      console.warn(`性能指标不一致: ${result.name}`);
+      return false;
+    }
+
     return true;
-  },
-  run: async (db) => {
-    // 插入数据
-    const inserted = 1000;
-    for (let i = 0; i < inserted; i++) {
-      db.addFact({
-        subject: `validate_${i}`,
-        predicate: 'validates',
-        object: 'correctness',
-      });
-    }
-
-    // 查询验证
-    const results = db.find({ predicate: 'validates' }).all();
-    const queried = results.length;
-
-    return { inserted, queried };
-  },
-};
-```
-
-## 性能监控
-
-### 1. 持续监控
-
-```javascript
-// monitoring.mjs
-import { createBenchmarkFramework } from './benchmarks/framework.mjs';
-
-async function continuousMonitoring() {
-  const framework = createBenchmarkFramework('./monitor.synapsedb');
-
-  // 定义关键性能指标测试
-  const kpiTests = [
-    {
-      name: 'KPI_写入延迟',
-      target: { p95: 5 }, // 目标: P95 < 5ms
-      run: async (db) => {
-        const latencies = [];
-        for (let i = 0; i < 100; i++) {
-          const start = performance.now();
-          db.addFact({
-            subject: `kpi_${i}`,
-            predicate: 'monitors',
-            object: 'performance',
-          });
-          latencies.push(performance.now() - start);
-        }
-
-        latencies.sort((a, b) => a - b);
-        return { p95: latencies[Math.floor(latencies.length * 0.95)] };
-      },
-    },
-  ];
-
-  // 运行监控
-  const results = await framework.runSuite('KPI监控', kpiTests);
-
-  // 检查是否达标
-  for (const result of results) {
-    if (result.target && result.result.p95 > result.target.p95) {
-      console.error(
-        `🚨 性能告警: ${result.name} P95延迟 ${result.result.p95}ms 超过目标 ${result.target.p95}ms`,
-      );
-    } else {
-      console.log(`✅ ${result.name} 达标: P95延迟 ${result.result.p95}ms`);
-    }
   }
-
-  await framework.cleanup();
-}
-
-// 定时执行
-setInterval(continuousMonitoring, 60000); // 每分钟检查
-```
-
-### 2. 性能回归测试
-
-```javascript
-// regression-test.mjs
-async function regressionTest() {
-  // 加载基准结果
-  const baseline = await loadBaselineResults('./baseline-results.json');
-
-  // 运行当前测试
-  const framework = createBenchmarkFramework('./regression.synapsedb');
-  const current = await framework.runSuite('回归测试', baseline.tests);
-
-  // 比较结果
-  const comparison = compareResults(baseline.results, current);
-
-  for (const test of comparison) {
-    const change = ((test.current - test.baseline) / test.baseline) * 100;
-
-    if (Math.abs(change) > 10) {
-      // 变化超过10%
-      console.log(`📈 性能变化: ${test.name} ${change > 0 ? '+' : ''}${change.toFixed(1)}%`);
-
-      if (change > 20) {
-        // 性能严重退化
-        console.error(`🚨 性能严重退化: ${test.name}`);
-        process.exit(1);
-      }
-    }
-  }
-
-  await framework.cleanup();
 }
 ```
 
-## 报告生成
+### 4. 持续监控
 
-### 1. HTML 报告
-
-```javascript
-async function generateHTMLReport(results) {
-  const html = `
-<!DOCTYPE html>
-<html>
-<head>
-  <title>SynapseDB 性能报告</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-  <h1>性能基准测试报告</h1>
-  <div id="results">
-    ${results
-      .map(
-        (result) => `
-      <div class="test-result">
-        <h3>${result.name}</h3>
-        <p>平均执行时间: ${result.avgDuration}ms</p>
-        <p>操作数: ${result.operations || 'N/A'}</p>
-        <canvas id="${result.name.replace(/\s+/g, '-')}-chart"></canvas>
-      </div>
-    `,
-      )
-      .join('')}
-  </div>
-</body>
-</html>`;
-
-  await fs.writeFile('./performance-report.html', html);
-}
-```
-
-### 2. JSON 导出
-
-```javascript
-async function exportDetailedResults(results, filename) {
-  const report = {
-    timestamp: new Date().toISOString(),
-    environment: {
-      node: process.version,
-      platform: process.platform,
-      arch: process.arch,
-      memory: process.memoryUsage(),
-    },
-    results: results.map((result) => ({
-      name: result.name,
-      metrics: result.metrics,
-      duration: result.duration,
-      iterations: result.iterations,
-      memoryUsage: result.memoryUsage,
-      success: result.success,
-      error: result.error || null,
-    })),
+```typescript
+// 设置性能监控告警
+class PerformanceMonitor {
+  private thresholds = {
+    maxExecutionTime: 5000, // 5秒
+    maxMemoryUsage: 500 * 1024 * 1024, // 500MB
+    minOperationsPerSecond: 100, // 100 ops/sec
   };
 
-  await fs.writeFile(filename, JSON.stringify(report, null, 2));
+  checkThresholds(result: BenchmarkResult): string[] {
+    const violations: string[] = [];
+
+    if (result.executionTime > this.thresholds.maxExecutionTime) {
+      violations.push(`执行时间超限: ${result.executionTime}ms`);
+    }
+
+    if (result.memoryUsage > this.thresholds.maxMemoryUsage) {
+      violations.push(`内存使用超限: ${(result.memoryUsage / 1024 / 1024).toFixed(1)}MB`);
+    }
+
+    if (result.operationsPerSecond < this.thresholds.minOperationsPerSecond) {
+      violations.push(`吞吐量过低: ${result.operationsPerSecond.toFixed(0)} ops/sec`);
+    }
+
+    return violations;
+  }
 }
 ```
 
-通过这个基准测试框架，你可以全面评估 SynapseDB 在不同场景下的性能表现，确保数据库在生产环境中的可靠性和高效性。
+## 故障排除
+
+### 常见问题
+
+1. **测试超时**
+   - 检查 `timeout` 配置
+   - 减少测试数据量
+   - 优化测试逻辑
+
+2. **内存不足**
+   - 增加 Node.js 堆内存限制：`node --max-old-space-size=4096`
+   - 使用批处理减少内存占用
+   - 启用垃圾回收：`node --expose-gc`
+
+3. **结果不稳定**
+   - 增加预热运行次数
+   - 增加测试运行次数
+   - 确保测试环境一致性
+
+### 调试技巧
+
+```typescript
+// 启用详细日志
+const debugResults = await manager.benchmark({
+  suites: [synapseDBCoreSuite],
+  outputFormats: ['console'],
+  outputDir: './reports',
+  debug: true, // 启用调试模式
+});
+
+// 单独运行有问题的测试
+const problematicTest = synapseDBCoreSuite.benchmarks.find((test) => test.name === '问题测试');
+
+const result = await runner.runTest(problematicTest, {
+  runs: 1,
+  warmupRuns: 0,
+  debug: true,
+});
+
+console.log('调试结果:', result);
+```
+
+通过这个详细的性能基准测试指南，你可以充分利用 SynapseDB 的基准测试框架，进行全面的性能分析、回归检测和优化工作，确保数据库在各种场景下的稳定性能。
