chore(coverage): 放开 spatial/types.ts 排除并将 spatial 模块改为 type-only 导入\n\n- 避免运行时加载类型文件造成装饰性 0% 覆盖\n- 新增 gremlin step 运行时测试修正 Prettier 格式

--- a/.qoder/repowiki/zh/content/性能基准与测试/性能基准与测试.md
+++ b/.qoder/repowiki/zh/content/性能基准与测试/性能基准与测试.md
@@ -19,12 +19,17 @@
 - [suites.ts](file://src/benchmark/suites.ts)
 - [community.ts](file://src/algorithms/community.ts)
 - [snapshot_memory_optimization.test.ts](file://tests/system/snapshot_memory_optimization.test.ts) - *在最近提交中更新*
+- [index_manager.test.ts](file://tests/unit/benchmark/index_manager.test.ts) - *新增性能基准测试用例*
+- [manager_benchmark.test.ts](file://tests/unit/benchmark/manager_benchmark.test.ts) - *新增性能基准测试用例*
+- [suites_import.test.ts](file://tests/unit/benchmark/suites_import.test.ts) - *新增性能基准测试用例*
 </cite>
 
 ## 更新摘要
 **变更内容**   
 - 在“关键路径性能分析”部分新增了关于Louvain社区发现算法的说明，解释其行为变更及对性能测试的影响。
 - 新增了对 `snapshot_memory_optimization.test.ts` 文件的引用，该文件重构了内存优化测试并采用新的临时目录管理方式。
+- 根据最新代码变更，补充了 `BenchmarkManager` 类的功能说明，包括多格式报告生成和回归测试检测。
+- 新增了对 `tests/unit/benchmark/` 目录下三个新性能测试文件的引用，这些文件增强了基准测试框架的验证能力。
 - 保持原有文档结构和其余内容不变。
 
 ## 目录
@@ -163,4 +168,17 @@ QPS = --limit 的值 / 查询耗时(秒)
 ### 延迟分布
 延迟是指从发出请求到收到响应所花费的时间。`comprehensive.mjs` 会记录每次测量的耗时。关注点包括：
 - **平均延迟**: 所有运行时间的算术平均值。
-- **P95/P99 延迟**: 95% 或 99%
+- **P95/P99 延迟**: 95% 或 99% 请求完成所需的最大时间，是衡量系统尾部延迟的关键指标。
+
+### 多格式报告生成
+`BenchmarkManager` 类支持生成多种格式的报告，以满足不同需求：
+- **控制台报告**: 实时输出简洁的文本摘要。
+- **HTML报告**: 生成交互式网页报告，包含图表和详细数据。
+- **JSON报告**: 生成机器可读的结构化数据，便于集成到CI/CD流水线。
+- **CSV报告**: 生成表格数据，方便导入电子表格软件进行进一步分析。
+
+**相关文件**
+- [index.ts](file://src/benchmark/index.ts) - *包含 BenchmarkManager 类的实现*
+
+### 性能回归检测
+系统内置了性能回归检测功能，可通过 `runRegressionTest` 方法比较当前测试结果与基线报告。它会计算关键指标（如执行时间、内存使用、每秒操作数）的变化百分比，并
