--- a/.qoder/repowiki/zh/content/测试架构/测试架构.md
+++ b/.qoder/repowiki/zh/content/测试架构/测试架构.md
@@ -1,4 +1,3 @@
-<docs>
 # 测试架构
 
 <cite>
@@ -14,6 +13,9 @@
 - [performance.test.ts](file://tests/performance/performance_baseline.test.ts)
 - [.github/workflows/ci.yml](file://.github/workflows/ci.yml) - *CI流程优化*
 - [tempfs.ts](file://tests/helpers/tempfs.ts) - *新增测试助手工具*
+- [rtree.ts](file://src/spatial/rtree.ts) - *修复插入分裂回溯越界问题*
+- [rtree.test.ts](file://tests/unit/spatial/rtree.test.ts) - *R-Tree基础查询测试*
+- [spatialQuery.test.ts](file://tests/unit/spatial/spatialQuery.test.ts) - *空间查询管理器测试*
 </cite>
 
 ## 更新摘要
@@ -23,6 +25,7 @@
 - CI工作流优化，测试执行策略调整
 - 更新Vitest配置说明，准确描述并发控制与资源管理机制
 - 引入 `tempfs` 测试助手模块，统一管理临时目录创建与清理
+- 修复R-Tree索引在插入时的分裂回溯越界问题，确保沿插入路径自底向上检查分裂操作的安全性
 
 ### 目录
 1. [引言](#引言)
@@ -71,6 +74,21 @@ K --> L[再次 drain 应返回空数组]
 **Diagram sources**
 - [staging.ts](file://src/storage/staging.ts#L14-L29)
 - [staging.test.ts](file://tests/unit/storage/staging.test.ts#L1-L270)
+
+此外，针对空间索引模块中的 `RTree` 类也进行了充分的单元测试。`RTree` 实现了高效的R-Tree空间索引，支持边界框查询、最近邻搜索等功能。近期修复了插入过程中因分裂回溯不当导致的越界问题，确保了树结构的稳定性和查询准确性。
+
+```mermaid
+flowchart TD
+M[创建 RTree 实例] --> N[插入点(0,0), (1,1), (2,2)]
+N --> O[边界框查询[-1,-1,3,3]应返回全部]
+O --> P[最近邻查询(0,0)应返回(0,0)]
+P --> Q[范围查询距离1.5内应包含多个点]
+Q --> R[删除点(1,1)后验证剩余结果]
+```
+
+**Diagram sources**
+- [rtree.ts](file://src/spatial/rtree.ts#L160-L814)
+- [rtree.test.ts](file://tests/unit/spatial/rtree.test.ts#L1-L34)
 
 ### 集成测试：覆盖模块间协作
 集成测试关注多个模块协同工作时的行为，验证接口契约和数据流的正确性。例如，在查询与存储模块之间进行交互测试，确保 Cypher 查询能够正确访问由 WAL（Write-Ahead Log）持久化的数据。
