--- a/.qoder/repowiki/zh/content/高级主题/高级主题.md
+++ b/.qoder/repowiki/zh/content/高级主题/高级主题.md
@@ -1,4 +1,3 @@
-<docs>
 # 高级主题
 
 <cite>
@@ -132,4 +131,68 @@ sequenceDiagram
 participant Client as "客户端"
 participant Store as "PersistentStore"
 participant Lock as "文件锁系统"
-Client->>
+Client->>Store : 请求写入
+Store->>Lock : 尝试获取写锁
+alt 锁获取成功
+Lock-->>Store : 返回锁句柄
+Store->>Store : 执行写入操作
+Store-->>Client : 写入完成
+else 锁已被占用
+Lock-->>Store : 抛出占用异常
+Store-->>Client : 返回错误信息
+end
+```
+
+**图表来源**
+- [lock.ts](file://src/utils/lock.ts#L6-L41)
+- [persistentStore.ts](file://src/storage/persistentStore.ts#L61-L904)
+
+**章节来源**
+- [lock.ts](file://src/utils/lock.ts#L6-L41)
+- [persistentStore.ts](file://src/storage/persistentStore.ts#L61-L904)
+
+## 增强类型系统支持精确类型推断
+
+`enhanced.ts` 文件中的增强类型系统为整个项目提供了更严格的类型约束和更精确的类型推断能力。通过引入条件类型、映射类型和模板字面量类型，系统能够根据输入参数的结构动态生成输出类型。
+
+例如，在查询构建器中，字段选择的类型会根据实体模型的定义自动推导可用属性；在事务处理中，嵌套批次的类型能够准确反映各层暂存数据的结构变化。这种类型系统减少了运行时类型检查的开销，同时提高了开发体验和代码安全性。
+
+此外，类型系统还支持泛型约束和分布式条件类型，使得复杂的数据转换操作也能获得准确的类型提示。这对于维护大型图数据库应用的类型安全至关重要。
+
+**章节来源**
+- [enhanced.ts](file://src/types/enhanced.ts)
+
+## 组件调用与自定义插件扩展
+
+图算法模块的设计支持灵活的组件调用和插件扩展机制。上层功能通过 `GraphAlgorithmSuiteImpl` 实例调用各类算法，所有算法均遵循统一的接口规范，便于集成和替换。
+
+对于自定义算法插件，开发者可通过实现 `GraphAlgorithmSuite` 接口并注册到算法工厂中来扩展系统功能。插件可以覆盖现有算法或新增专用分析能力，系统会自动将其纳入统一调用链。
+
+扩展点主要包括：
+- 自定义中心性算法实现
+- 新的社区发现策略
+- 特定领域的相似度度量
+- 图结构分析新方法
+
+插件机制支持热加载和版本管理，确保扩展功能的稳定性和可维护性。
+
+**章节来源**
+- [suite.ts](file://src/algorithms/suite.ts)
+- [types.ts](file://src/algorithms/types.ts)
+
+## 性能敏感场景最佳实践
+
+在性能敏感的应用场景中，应遵循以下最佳实践：
+
+1. **避免长时间持有写锁**：写操作应尽量短小原子，避免在持有写锁期间执行耗时计算或网络请求。
+2. **合理设置算法超时阈值**：对于可能耗时较长的图算法（如Louvain社区发现），应设置合理的超时限制，防止阻塞主线程。
+3. **批量处理事务**：使用 `beginBatch`/`commitBatch` 进行批量写入，减少WAL刷盘次数，提高吞吐量。
+4. **流式查询大结果集**：对于可能返回大量数据的查询，使用 `streamQuery` 或 `streamFactRecords` 避免内存溢出。
+5. **选择合适索引**：根据查询模式选择最优索引顺序（SPO/SOP等），提升查询效率。
+
+这些实践有助于在保证数据一致性的同时最大化系统性能。
+
+**章节来源**
+- [persistentStore.ts](file://src/storage/persistentStore.ts)
+- [suite.ts](file://src/algorithms/suite.ts)
+- [community.ts](file://src/algorithms/community.ts)
